[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LeftContainer.gd" type="Script" id=1]

[node name="LeftContainer" type="Control" groups=["leftContainer"]]
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="addNewEntityTypeBtn" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Entity Definitions"

[node name="msgPacksBtn" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Message Packs"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 88.0
margin_right = 200.0
margin_bottom = 92.0

[node name="LayerList" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 200.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 100.0
margin_right = 200.0
margin_bottom = 104.0

[node name="LayerValuesList" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="LayerValuesContainer" type="VBoxContainer" parent="VBoxContainer/LayerValuesList"]
margin_right = 200.0
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 592.0
margin_right = 200.0
margin_bottom = 596.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 200.0
margin_bottom = 600.0

[connection signal="button_down" from="VBoxContainer/addNewEntityTypeBtn" to="." method="_on_addNewEntityTypeBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/msgPacksBtn" to="." method="_on_msgPacksBtn_button_down"]
